<resources>
    <string name="app_name">Temuin</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="alredy_have_an_account">Alredy Have an Account?</string>
    <string name="question">Test the quality of parts before shipment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="riasec_instruction">The following items were rated on a 1-5 scale of how much they would like to perform that task, with the labels 1=Dislike, 3=Neutral, 5=Enjoy.</string>
    <string name="next">NEXT</string>
    <string name="tipi_instruction">Petunjuk:
        <br>1 = Sangat tidak setuju</br>
        <br>2 = Tidak setuju</br>
        <br>3 = Sedikit tidak setuju</br>
        <br>4 = Ragu-ragu</br>
        <br>5 = Sedikit setuju</br>
        <br>6 = Setuju</br>
        <br>7 = Sangat setuju</br></string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="personality">Personality</string>
    <string name="dummy_personality">ENFP - Campaigner</string>
    <string name="dummy_desc_personality">"Diskripsi personality Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud "</string>
    <string name="recommend_community">Komunitas Untukmu</string>
    <string name="community_name">Nama Komunitas</string>
    <string name="community_desc">Diskripsi personality Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>
    <string name="join">JOIN</string>
    <string name="event_name">Event_Name</string>
    <string name="event_description">Diskripsi personality Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>
</resources>