<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Full_Name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/full_name"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="text"

        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/Full_Name"
        app:layout_constraintStart_toStartOf="@+id/Full_Name"
        app:layout_constraintTop_toBottomOf="@+id/Full_Name"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/Gender"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/gender_male_female"
        android:drawablePadding="10dp"
        android:hint="@string/gender"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="Autofill,TextFields" />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Gender"
        app:layout_constraintStart_toStartOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/Gender" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/alredy_have_an_account"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>